--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <button class="login__btn">&rarr;</button>
       </form>
     </nav>
-
+    <div class="welcome_page">
+      <h1>Dummy Accounts</h1>
+      <p>User: js | Pin: 1111</p>
+      <p>User: jd | Pin: 2222</p>
+    </div>
     <main class="app">
       <!-- BALANCE -->
       <div class="balance">
